# tweet-optim-dspy

./: .gitignore  README.md  pyproject.toml
src/pretrain_test/: __init__.py  pretrain_test.ipynb
src/pretrain_test/data/: hormozi_tweets.jsonl
src/tweet-optim-dspy/: pretrain_test.ipynb
src/tweet_optim_dspy/: __init__.py  fewshot  fewshotv2  fewshotv3  fewshotv43  fewshotwithrs  fewshotwithrsv2  fewshotwithrsv3  main.py  mipro_optimized  mipro_optimizedv2  mipro_optimizedv3  pretrain_test.ipynb
src/tweet_optim_dspy/data/: annotated_dataset.pkl  metric_trainset.pkl
