[project]
name = "tweet-optim-dspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.48.0",
    "python-dotenv>=1.0.1",
    "chromadb>=0.5.9",
    "dspy-ai>=2.5.0",
    "ipykernel>=6.29.5",
    "pinecone>=5.3.1",
    "weaviate-client==4.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
